packages/next-swc/crates/core/tests/errors/next-font-downloaders/font-modules/options-object/output.js
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
import a from '@next/google-fonts?{"font":"ABeeZee"}';
const a = fn({
    10: 'hello'
});
const a = fn({
    variant: [
        ...[],
        'hello'
    ]
});
const a = fn({
    variant: [
        i1
    ]
});
const a = fn({
    variant: [
        ,
        ''
    ]
});
const a = fn({
    variant: ()=>{}
});
const a = fn({
    variant () {}
});
const a = fn({
    ...{}
});
